tests/transpiler/x/java/partial_application.error
exit status 1
Main.java:3: error: method add in class Main cannot be applied to given types;
    int add5 = add(5);
               ^
  required: int,int
  found:    int
  reason: actual and formal argument lists differ in length
Main.java:8: error: cannot find symbol
        System.out.println(add5(3));
                           ^
  symbol:   method add5(int)
  location: class Main
2 errors
