tests/transpiler/x/java/partial_application.java
// Generated by Mochi transpiler
public class Main {
    static int add5 = add(5);
    static int add(int a, int b) {
        return a + b;
    }
    public static void main(String[] args) {
        System.out.println(add5(3));
    }
}
